@@ -3286,5 +3286,9 @@ int brain_server (const char *listen_host, const int listen_port, const char *br
 
   close (server_fd);
 
+  #if defined (_WIN)
+  WSACleanup();
+  #endif
+
   return 0;
 }
